2010-02-19  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Update build files

2010-01-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.mdp: Add new files.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files

2010-01-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.mdp: Remove deleted file.

2010-01-27  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files.

2010-01-25  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add some missing files to the
	  monodevelop solution

2010-01-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: update build files.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add and implement the SL 3.0 Validation
	  class.

2009-01-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* Makefile.am: Remove types that are not part of SL3 final API.

2009-12-22  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files.

2009-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System.IO/SimpleUnmanagedMemoryStream.cs: Removed (unused).
	We can use the UnmanagedMemoryStream that mscorlib provides

2009-12-21  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files.

2009-12-17  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Comment out the SL3 visual states for
	  now so the DRTs keep passing.

2009-12-15  Chris Toshok  <toshok@ximian.com>

	* Makefile.am: install the .dll.config file to both the gac and
	plugin directories.

	* System.Windows.dll.config: new file, we need to explicitly list