@@ -60,6 +60,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Windows.Controls, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Windows.Controls.Data, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
@@ -177,6 +178,7 @@
     <Compile Include="System.Windows.Automation.Peers\ListBoxItemAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\MediaElementAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\PatternInterfaceTest.cs" />
+    <Compile Include="System.Windows.Automation.Peers\PopupAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\ProgressBarAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\RadioButtonAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\RangeBaseAutomationPeerTest.cs" />
@@ -187,6 +189,7 @@
     <Compile Include="System.Windows.Automation.Peers\SelectorItemAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\SliderAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\TabControlAutomationPeerTest.cs" />
+    <Compile Include="System.Windows.Automation.Peers\TabItemAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\TextBlockAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\TextBoxAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\ThumbAutomationPeerTest.cs" />
